Fixed Navigation Bar, Scrollbar Horizontal, Added Attendants for Public Events, Fixed Searchbar-reload

--- a/src/app/navigation-dialog/navigation-dialog.component.scss
+++ b/src/app/navigation-dialog/navigation-dialog.component.scss
@@ -5,6 +5,10 @@
 $button-margin: 15px;
 $list-item-margin: 15px;
 
+.index-div{
+  z-index: 1003;
+}
+
 .animation-container{
   animation: zoom-in-zoom-out 800ms ease;
 }
