--- a/src/app/public-events-search/public-events-search.component.scss
+++ b/src/app/public-events-search/public-events-search.component.scss
@@ -3,7 +3,8 @@
 @import "src/styles/animations";
 
 .card{
-  overflow: auto !important;
+  overflow-x: auto !important;
+  overflow-y: hidden !important;
   min-height: 50vh !important;
 }
 
@@ -31,7 +32,7 @@ h1{
 .signup-outer-container{
   position: relative;
   display: flex;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .signup-container{
