--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,16 +3,20 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.wrapper{
+  padding-top: 7vh;
+}
+
 .page-container{
   background-color: $background-dark;
   position: absolute;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
 //Navigation Dialog SCSS - Needs to be in root
 .full-screen-dialog{
-  max-width: 100vw !important;
+  max-width: 100% !important;
   box-sizing: border-box;
   overflow: hidden;
   display: flex;
